[LayoutNG] Update line position when overflow

This patch fixes position inconsistency when line overflow
occurred, and the end part of the last text item was shorten
but still does not fit, and no previous break opportunities
were found.

Bug: 860516
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_layout_ng
Change-Id: I848c1d6fc156fa312064078e2b93b2572a66094a
Reviewed-on: https://chromium-review.googlesource.com/1130960
Reviewed-by: Emil A Eklund <eae@chromium.org>
Commit-Queue: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573631}
Former-commit-id: 10b87936c878dc0caab465df5758187e74a36a14